docs/1.0/_sources/user-guide/model-gallery/temporal/plot_sine_temporal.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/temporal/plot_sine_temporal.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_model-gallery_temporal_plot_sine_temporal.py>`
        to download the full example code or to run this example in your browser via Binder

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_temporal_plot_sine_temporal.py:


.. _sine-temporal-model:

Sine temporal model
===================

This model parametrises a time model of sinusoidal modulation.

.. math:: F(t) = 1 + amp \cdot \sin(\omega \cdot (t-t_{\rm{ref}}))

.. GENERATED FROM PYTHON SOURCE LINES 15-18

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 18-38

.. code-block:: python3


    import numpy as np
    from astropy import units as u
    from astropy.time import Time
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import (
        Models,
        PowerLawSpectralModel,
        SineTemporalModel,
        SkyModel,
    )

    time_range = [Time.now(), Time.now() + 16 * u.d]
    omega = np.pi / 4.0 * u.rad / u.day
    sine_model = SineTemporalModel(
        amp=0.5, omega=omega, t_ref=(time_range[0].mjd - 0.1) * u.d
    )
    sine_model.plot(time_range)
    plt.grid(which="both")




.. image-sg:: /user-guide/model-gallery/temporal/images/sphx_glr_plot_sine_temporal_001.png
   :alt: plot sine temporal
   :srcset: /user-guide/model-gallery/temporal/images/sphx_glr_plot_sine_temporal_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 39-42

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 42-51

.. code-block:: python3


    model = SkyModel(
        spectral_model=PowerLawSpectralModel(),
        temporal_model=sine_model,
        name="sine-model",
    )
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/gammapy-docs/gammapy-docs/gammapy/.tox/build_docs/lib/python3.9/site-packages/astropy/time/core.py:2408: TimeDeltaMissingUnitWarning: Numerical value without unit or explicit format passed to TimeDelta, assuming days
      warn('Numerical value without unit or explicit format passed to'
    components:
    -   name: sine-model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
        temporal:
            type: SineTemporalModel
            parameters:
            -   name: amp
                value: 0.5
            -   name: omega
                value: 0.7853981633974483
                unit: d-1 rad
            -   name: t_ref
                value: 59893.664977519125
                unit: d






.. _sphx_glr_download_user-guide_model-gallery_temporal_plot_sine_temporal.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: binder-badge

      .. image:: images/binder_badge_logo.svg
        :target: https://mybinder.org/v2/gh/gammapy/gammapy-webpage/v1.0?urlpath=lab/tree/notebooks/1.0/user-guide/model-gallery/temporal/plot_sine_temporal.ipynb
        :alt: Launch binder
        :width: 150 px

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_sine_temporal.py <plot_sine_temporal.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_sine_temporal.ipynb <plot_sine_temporal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
